--- a/.github/workflows/FunctionsEfteling.yml
+++ b/.github/workflows/FunctionsEfteling.yml
@@ -5,14 +5,14 @@ on:
     - master
 env:
   AZURE_FUNCTIONAPP_NAME: FunctionsEfteling
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: Functions/published
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: Functions\published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 3.1.x
   WORKING_DIRECTORY: Functions
   DOTNET_CORE_VERSION_INPROC: ''
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
